--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -4,6 +4,66 @@
   <meta charset="UTF-8">
   <title>Favorite Poems</title>
   <link rel="stylesheet" href="/styles.css">
+<style>
+    /* CSS styles for favorite_poems.ejs */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #FFFACD; /* Lemon chiffon */
+      color: #2F4F4F; /* Dark slate gray */
+    }
+    header {
+      background-color: #004445; /* Dark teal */
+      color: #FFFACD; /* Lemon chiffon */
+      padding: 20px 0;
+      text-align: center;
+    }
+    .container {
+      width: 80%;
+      margin: 0 auto;
+    }
+    h1 {
+      margin: 0;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 20px 0;
+      padding: 20px;
+      border: 2px solid #2c786c; /* Dark sea green */
+      border-radius: 10px;
+    }
+    a {
+      color: #2c786c; /* Dark sea green */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #faf5e4; /* Beige */
+      color: #2c786c; /* Dark sea green */
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      background-color: #004445; /* Dark teal */
+      color: #FFFACD; /* Lemon chiffon */
+      padding: 20px 0;
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+    footer p {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <header class="fourth-color">
